--- a/src/views/Billing/Next/Next.scss
+++ b/src/views/Billing/Next/Next.scss
@@ -8,6 +8,7 @@
 }
 
 .Content {
+  align-items: center;
   display: flex;
   flex: 1 1 auto;
   flex-direction: column;
@@ -15,11 +16,7 @@
 }
 
 .Date {
-  font-weight: 700;
-
-  &Start {
-    color: $color-gray-600;
-  }
+  color: $color-gray-600;
 }
 
 .Header {
