Added products menu.

--- a/src/views/Landing/containers/Header/Header.scss
+++ b/src/views/Landing/containers/Header/Header.scss
@@ -36,6 +36,7 @@
   height: 100px;
   justify-content: space-between;
   padding: 20px;
+  position: relative;
   width: 100%;
 
   @include breakpoints(mobile) {
