--- a/src/views/Landing/containers/Features/components/Item.scss
+++ b/src/views/Landing/containers/Features/components/Item.scss
@@ -58,6 +58,10 @@
     flex: none;
     margin: 0 -32px 60px;
   }
+
+  @include breakpoints(mobile) {
+    margin: 0 -12px 60px;
+  }
 }
 
 .Content {
