--- a/src/views/Landing/Landing.scss
+++ b/src/views/Landing/Landing.scss
@@ -53,7 +53,8 @@
       @include breakpoints(mobile) {
         background-image: url('./assets/half-bg-1_mobile.webp');
         height: 552px;
-        top: -420px;
+        min-width: auto;
+        top: -360px;
         width: 100%;
       }
     }
