--- a/src/views/Landing/containers/Header/components/Product.scss
+++ b/src/views/Landing/containers/Header/components/Product.scss
@@ -1,3 +1,4 @@
+@import '~@styles/breakpoints';
 @import '~@styles/colors';
 
 .Root {
@@ -21,6 +22,12 @@
         flex: 0 0 40px;
         height: 40px;
         width: 40px;
+
+        @include breakpoints(mobile) {
+          flex: 0 0 32px;
+          height: 32px;
+          width: 32px;
+        }
       }
     }
 
@@ -31,6 +38,12 @@
         flex: 0 0 72px;
         height: 72px;
         width: 72px;
+
+        @include breakpoints(mobile) {
+          flex: 0 0 40px;
+          height: 40px;
+          width: 40px;
+        }
       }
     }
   }
@@ -38,6 +51,10 @@
 
 .Description {
   color: rgba($color-brown, .6);
+
+  @include breakpoints(mobile) {
+    font-size: 12px !important;
+  }
 }
 
 .Info {
@@ -53,4 +70,8 @@
 .Title {
   color: $color-brown;
   white-space: nowrap;
+
+  @include breakpoints(mobile) {
+    font-size: 14px !important;
+  }
 }
