--- a/src/views/Sign/containers/common.scss
+++ b/src/views/Sign/containers/common.scss
@@ -25,6 +25,7 @@
 
   @include breakpoints(mobile) {
     display: grid;
+    grid-gap: 28px;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: auto;
   }
