--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -19,7 +19,7 @@ $color-gray-400: #c3c4c8;
 $color-gray-300: #e9e9e9;
 $color-gray-200: #f0f1f5;
 $color-gray-100: #f5f5f3;
-$color-gray-50: #fafbff;
+$color-gray-50: #fbfbfb;
 $color-gray-0: #fff;
 
 // Green
