--- a/src/views/Landing/containers/Header/containers/Menu/components/Toggle.scss
+++ b/src/views/Landing/containers/Header/containers/Menu/components/Toggle.scss
@@ -32,7 +32,8 @@
 
   &Is {
     &Selected {
-      box-shadow: 0 -2px 2px 0 rgba(255, 255, 255, .4),
+      box-shadow:
+        0 -2px 2px 0 rgba(255, 255, 255, .4),
         0 2px 2px 0 rgba(95, 162, 75, .6);
       opacity: 1;
       width: 24px;
