--- a/src/views/Landing/containers/Header/containers/Menu/responsive/Menu.desktop.scss
+++ b/src/views/Landing/containers/Header/containers/Menu/responsive/Menu.desktop.scss
@@ -50,7 +50,8 @@
   &:hover {
     .Control {
       background: $color-gray-0;
-      box-shadow: 0 -10px 10px 0 rgba($color-gray-0, .6),
+      box-shadow:
+        0 -10px 10px 0 rgba($color-gray-0, .6),
         0 10px 10px 0 rgba($color-gray-1000, .2);
       cursor: pointer;
     }
