--- a/src/styles/breakpoints.scss
+++ b/src/styles/breakpoints.scss
@@ -16,7 +16,9 @@
       @media only screen and (max-width: 767px) {
         @content;
       }
-    } @else if $device == tablet {
+    }
+
+    @else if $device == tablet {
       @media only screen and (min-width: 768px) and (max-width: 1024px) {
         @content;
       }
