--- a/src/views/Landing/containers/Intro/containers/Phone/Phone.scss
+++ b/src/views/Landing/containers/Intro/containers/Phone/Phone.scss
@@ -1,37 +1,49 @@
 @import '~@styles/colors';
 
 .Root {
-  background-image:
-    linear-gradient(
-      to top,
-      $color-green-400,
-      20%,
-      $color-green-200
-    ),
-    linear-gradient(to bottom, $color-green-200, $color-green-400 23%);
-  border: 16px solid #6f77ff;
   border-radius: 68px;
   display: flex;
-  flex-direction: column;
   height: 958px;
-  overflow: hidden;
+  justify-content: center;
   position: relative;
-  top: 80px;
-  // transform: scale(.7);
-  transform: rotateX(340deg) rotateY(16deg) rotateZ(8deg) scale(.7);
+  top: 40px;
+  transform: rotateX(340deg) rotateY(16deg) rotateZ(8deg) scale(.75);
   width: 460px;
   z-index: 1;
+
+  &::after {
+    bottom: 0;
+    box-shadow: 20px 20px 80px rgba($color-gray-1000, 1);
+    content: '';
+    display: block;
+    height: 40px;
+    position: absolute;
+    width: 80%;
+    z-index: -1;
+  }
+
+  &::before {
+    background: #6f77ff;
+    content: '';
+    height: 120px;
+    position: absolute;
+    right: -12px;
+    top: 240px;
+    width: 4px;
+  }
 }
 
 .Container {
   background: $color-gray-50;
   border-radius: 52px 52px 0 0;
-  box-shadow: 0 0 0 4px rgba($color-gray-0, .2);
+  box-shadow: 0 0 0 8px rgba($color-gray-0, .2);
   display: flex;
   flex: 1 1 calc(100% - 160px);
   flex-direction: column;
   max-height: calc(100% - 160px);
   overflow: hidden;
+  position: relative;
+  z-index: 2;
 }
 
 .Group {
@@ -63,6 +75,24 @@
   display: flex;
   flex: 0 0 160px;
   justify-content: center;
+}
+
+.Phone {
+  background-image:
+    linear-gradient(
+      to bottom,
+      $color-green-200,
+      $color-green-400 20%
+    ),
+    linear-gradient(to top, $color-green-400, 20%, $color-green-200);
+  border: 16px solid #757dff;
+  border-radius: 68px;
+  box-shadow: 2px 2px 0 2px #6870ff, 10px 10px 0 8px #676bde;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: hidden;
+  width: 100%;
 }
 
 .Track {
