--- a/src/components/ContextMenu/ContextMenu.scss
+++ b/src/components/ContextMenu/ContextMenu.scss
@@ -7,5 +7,5 @@
 .Card {
   border: 2px solid rgba($color-primary, .2);
   box-shadow: 0 20px 40px 0 rgba(0, 0, 0, .1);
-  width: 220px;
+  min-width: 220px;
 }
