--- a/src/views/Channel/Stat/Stat.scss
+++ b/src/views/Channel/Stat/Stat.scss
@@ -6,33 +6,14 @@
 }
 
 .Container {
-  background: transparent;
-  column-gap: 32px;
-  display: grid;
-  grid-template-areas:
-    'a c'
-    'b c';
-  grid-template-columns: 240px 1fr;
-  grid-template-rows: 240px 240px;
-  row-gap: 32px;
+  height: 520px;
+}
 
-  // @todo - mock
-  & > * {
-    background: $color-gray-0;
-    border-radius: 20px;
-
-    &:nth-child(1) {
-      grid-area: a;
-    }
-
-    &:nth-child(2) {
-      grid-area: b;
-    }
-
-    &:nth-child(3) {
-      grid-area: c;
-    }
-  }
+.Chart {
+  border-radius: 8px;
+  flex: 1 1 auto;
+  margin: 20px 0 0;
+  max-height: calc(100% - 72px);
 }
 
 .Tabs {
