Connected stats to API.

--- a/src/views/Channel/Source/Source.scss
+++ b/src/views/Channel/Source/Source.scss
@@ -1,5 +1,5 @@
 @import '~@styles/colors';
-@import '../common.scss';
+@import '../Common/common.scss';
 
 .Spin {
   animation: spin .8s linear infinite;
