--- a/src/views/Channel/Stats/Stats.scss
+++ b/src/views/Channel/Stats/Stats.scss
@@ -1,19 +1,25 @@
 @import '~@styles/colors';
 
 .Actions {
-  align-self: flex-end;
+  align-items: flex-end;
+  display: flex;
   height: 100%;
+
+  & > * {
+    height: 100%;
+  }
 }
 
 .Container {
   height: 520px;
+  padding: 24px;
 }
 
 .Chart {
   border-radius: 8px;
   flex: 1 1 auto;
-  margin: 20px 0 0;
-  max-height: calc(100% - 72px);
+  margin: 24px 0 0;
+  max-height: calc(100% - 80px);
 }
 
 .Tabs {
