--- a/src/views/Chat/Messages/components/Comment.scss
+++ b/src/views/Chat/Messages/components/Comment.scss
@@ -1,14 +1,15 @@
 @import '~@styles/colors';
 
 .Root {
-  margin: 24px 0;
+  background: rgba($color-yellow-500, .2);
+  border-radius: 8px;
+  margin: 8px -16px;
+  padding: 0 16px;
 }
 
 .Author {
   align-items: center;
   display: flex;
-  position: absolute;
-  right: 0;
 }
 
 .Avatar {
@@ -23,22 +24,21 @@
 
 .Header {
   align-items: center;
-  border-bottom: 2px solid $color-green-50;
+  border-bottom: 2px solid $color-yellow-500;
   display: flex;
   height: 56px;
-  justify-content: center;
+  justify-content: space-between;
   position: relative;
 }
 
 .Name {
-  color: $color-primary;
   font-weight: 600;
   margin: 0 8px;
 }
 
 .Text {
   color: $color-gray-900;
-  margin: 16px 60px;
+  padding: 16px 60px;
   text-align: center;
 }
 
