--- a/src/views/Chat/Send/containers/Form.scss
+++ b/src/views/Chat/Send/containers/Form.scss
@@ -2,7 +2,16 @@
 
 .Root {
   border-top: 2px solid $color-gray-100;
+  min-height: 80px;
   padding: 16px 32px;
+  transition: all .2s;
+  will-change: background;
+
+  &Is {
+    &Comment {
+      background: rgba($color-yellow-500, .15);
+    }
+  }
 }
 
 .Comment {
