--- a/src/views/Chat/Threads/Threads.scss
+++ b/src/views/Chat/Threads/Threads.scss
@@ -24,7 +24,10 @@
 
 .Container {
   height: 100%;
+  margin: 0 -40px;
   max-height: 100%;
+  overflow: auto;
+  padding: 0 40px;
 
   & > div {
     height: 100%;
