--- a/src/views/Chat/Threads/components/Item.scss
+++ b/src/views/Chat/Threads/components/Item.scss
@@ -2,18 +2,27 @@
 
 .Root {
   align-items: center;
-  border-radius: 8px;
   color: $color-gray-800;
   display: flex;
-  margin: 8px -12px 0;
-  padding: 12px;
+  margin: 0 -12px 0;
+  padding: 16px 12px;
   text-decoration: none;
   transition: all .2s;
   width: calc(100% + 24px);
 
+  &:not(:first-child) {
+    border-top: 2px solid $color-gray-300;
+  }
+
   &Is {
     &Selected {
-      background-color: rgba($color-blue-300, .2);
+      background-color: rgba($color-blue-300, .12);
+      border-color: transparent !important;
+      border-radius: 8px;
+
+      & + * {
+        border-color: transparent !important;
+      }
 
       .Badge {
         background-color: $color-gray-100;
