--- a/src/views/Chat/Header/Header.scss
+++ b/src/views/Chat/Header/Header.scss
@@ -1,13 +1,24 @@
 @import '~@styles/colors.scss';
 
 .Root {
-  align-items: center;
   border-bottom: 2px solid $color-gray-100;
-  display: flex;
   flex: 0 0 80px;
+  flex-direction: column;
   height: 80px;
-  justify-content: space-between;
+  overflow: hidden;
   padding: 0 28px;
+
+  &Is {
+    &Opened {
+      .Header {
+        transform: translateY(-100%);
+      }
+
+      .Search {
+        transform: translateY(-100%);
+      }
+    }
+  }
 }
 
 .Action {
@@ -23,6 +34,14 @@
   }
 }
 
+.Header {
+  align-items: center;
+  display: flex;
+  height: 80px;
+  justify-content: space-between;
+  transition: all .2s;
+}
+
 .Info {
   align-items: center;
   display: flex;
@@ -35,6 +54,10 @@
 .Name {
   font-weight: 600;
   margin: 0 0 0 20px;
+}
+
+.Search {
+  transition: all .2s;
 }
 
 .Subscriber {
