--- a/src/views/Chat/Send/components/Emoji.scss
+++ b/src/views/Chat/Send/components/Emoji.scss
@@ -10,84 +10,87 @@
   bottom: 72px;
   box-shadow: 0 20px 40px 0 rgba($color-gray-1000, .1);
   height: 650px;
+  left: 0;
   overflow: hidden;
   position: absolute;
   width: 392px;
   z-index: 10;
 
-  :global .emoji {
-    &-categories {
-      align-items: center;
-      border-top: 2px solid $color-gray-100;
-      height: 66px;
-      padding: 0 40px;
-    }
+  :global .emoji-mart {
+    border: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100% !important;
 
-    &-group {
-      justify-content: start;
-      padding: 0;
-      width: 100%;
+    &-anchor {
+      &-selected {
+        color: $color-blue-300 !important;
+      }
 
-      &::after {
+      &-bar {
         display: none;
       }
+    }
 
-      &::before {
-        background: $color-gray-0;
-        box-shadow: 0 0 8px 8px rgba($color-gray-0, 1);
+    &-anchors {
+      align-items: center;
+      display: flex;
+      height: 100%;
+      padding: 0;
+    }
+
+    &-bar {
+      border: 0;
+      border-top: 2px solid $color-gray-100;
+      flex: 0 0 64px;
+      order: 3;
+      padding: 0 28px;
+      width: 100%;
+    }
+
+    &-category {
+      margin: 8px 0 0;
+
+      &-label {
+        color: $color-gray-500;
         font-family: 'Montserrat', sans-serif;
         font-size: 12px;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-        font-weight: 600;
-        letter-spacing: .4px;
-        padding: 0 0 0 8px;
+
+        & > span {
+          font-weight: 600;
+        }
       }
     }
 
-    &-img {
-      height: 24px !important;
-      margin: 8px !important;
-      width: 24px !important;
-    }
+    &-search {
+      margin: 28px 28px 8px;
 
-    &-picker {
-      &-react {
-        border: 0;
-        display: flex;
-        flex-direction: column-reverse;
-        height: 100%;
-        width: 100%;
+      & > input {
+        background: $color-gray-100;
+        border: 2px solid $color-gray-300;
+        border-radius: 20px;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 12px;
+        font-weight: 600;
+        height: 32px;
+        padding: 0 8px 0 36px;
+        transition: all .2s;
 
-        .active-category-indicator-wrapper {
-          display: none !important;
+        &:focus {
+          border-color: rgba($color-blue-300, .8);
         }
+      }
 
-        .content-wrapper {
-          &::before {
-            display: none;
-          }
-        }
+      &-icon {
+        left: 16px;
+        right: auto;
       }
     }
 
     &-scroll {
-      &-wrapper {
-        padding: 0 32px;
-      }
-    }
-
-    &.has-skin-variation {
-      & > button::before {
-        display: none;
-      }
-    }
-
-    & > button {
-      &:hover,
-      &:focus-visible {
-        background-color: $color-blue-50;
-      }
+      flex: 1 1 auto;
+      padding: 0 28px;
     }
   }
 }
