--- a/src/containers/Plans/Item/Item.scss
+++ b/src/containers/Plans/Item/Item.scss
@@ -2,6 +2,7 @@
 
 @mixin color($color) {
   background: $color;
+  box-shadow: 0 40px 60px rgba($color, .4);
 
   .Background {
     background: linear-gradient(to bottom, lighten($color, 24), $color);
@@ -69,7 +70,7 @@
     &Paid {
       border: 2px solid rgba($color-white, .2);
       box-shadow:
-        inset 0 8px 8px 0 rgba($color-black, .06),
+        inset 0 8px 8px 0 rgba($color-black, .1),
         inset 0 -8px 8px 0 rgba($color-white, .1);
     }
   }
