--- a/src/containers/Plans/Item/components/Select.scss
+++ b/src/containers/Plans/Item/components/Select.scss
@@ -9,6 +9,10 @@
 
 .Bar {
   background: $color-white;
+  border-radius: 8px;
+  box-shadow:
+    0 -2px 8px rgba($color-white, .6),
+    0 4px 8px rgba($color-black, .2);
   height: 100%;
   position: absolute;
   transition: all .2s;
@@ -23,7 +27,7 @@
 
 .Point {
   align-items: center;
-  background: darken($color-blue, 4);
+  background: darken($color-blue, 6);
   border-radius: 100%;
   display: flex;
   height: 12px;
@@ -81,10 +85,8 @@
 }
 
 .Track {
-  background: rgba($color-blue, .6);
-  border-radius: 8px;
+  background: darken($color-blue, 2);
   height: 6px;
-  overflow: hidden;
   position: absolute;
   top: 3px;
   width: 100%;
