--- a/src/views/Sign/containers/common.scss
+++ b/src/views/Sign/containers/common.scss
@@ -1,4 +1,5 @@
 @import '~@styles/breakpoints';
+@import '~@styles/colors';
 
 .Actions {
   margin: 8px 0 0;
@@ -12,6 +13,15 @@
   }
 }
 
+.Disclaimer {
+  color: $color-gray-500;
+  margin: 0 20px 40px;
+
+  @include breakpoints(mobile) {
+    margin: 40px 20px;
+  }
+}
+
 .Container {
   padding: 40px 0 0;
 }
@@ -20,7 +30,7 @@
   display: grid;
   grid-column-gap: 40px;
   grid-template-columns: repeat(2, 260px);
-  grid-template-rows: 124px;
+  grid-template-rows: 96px;
   row-gap: 0;
 
   @include breakpoints(mobile) {
@@ -32,7 +42,7 @@
 
   @include breakpoints(desktop) {
     &Multiple {
-      grid-template-rows: repeat(2, 124px);
+      grid-template-rows: repeat(2, 96px);
     }
   }
 }
