--- a/src/containers/Plans/Plans.scss
+++ b/src/containers/Plans/Plans.scss
@@ -1,16 +1,20 @@
 @import '~@styles/colors';
 
 .Root {
-  height: 100%;
-  left: 0;
-  position: fixed;
-  top: 0;
-  width: 100%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .Backdrop {
-  background: rgba($color-gray-100, .9);
+  background: rgba($color-gray-100, .95);
   filter: blur(4px);
+}
+
+.Badge {
+  margin: 60px 0 0;
+  max-width: 640px;
+  width: 100%;
 }
 
 .Container {
@@ -18,7 +22,7 @@
   box-shadow: none;
 }
 
-.Content {
+.Plans {
   column-gap: 64px;
   display: grid;
   grid-template-columns: repeat(3, 296px);
