--- a/src/views/Billing/Current/Current.scss
+++ b/src/views/Billing/Current/Current.scss
@@ -4,11 +4,20 @@
   flex-direction: column-reverse;
 }
 
+.Feature {
+  align-items: center;
+  display: flex;
+}
+
 .Features {
   display: grid;
   grid-gap: 16px 16px;
   grid-template-columns: repeat(3, 1fr);
   margin: 28px 0;
+}
+
+.Icon {
+  margin: 0 16px 0 0;
 }
 
 .Title {
