--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -28,13 +28,13 @@
   border-radius: 20px;
   box-shadow: 0 40px 80px 0 rgba(0, 0, 0, .06);
   min-width: 360px;
-  padding: 60px 40px;
+  padding: 40px;
   position: relative;
   z-index: 2;
 }
 
 .Title {
-  margin: 0 0 20px;
+  margin: 0 0 40px;
   text-align: center;
   white-space: nowrap;
 }
