--- a/src/pages/Channel/Source/Source.scss
+++ b/src/pages/Channel/Source/Source.scss
@@ -1,5 +1,5 @@
 @import '~@styles/colors';
-@import '../Common/common.scss';
+@import '../Channel.scss';
 
 .Spin {
   animation: spin .8s linear infinite;
