--- a/src/Sign/Sign.scss
+++ b/src/Sign/Sign.scss
@@ -38,7 +38,7 @@
 
 .Land {
   &1 {
-    background-image: url('./Common/assets/land-1.png');
+    background-image: url('./assets/land-1.png');
     z-index: 2;
 
     @include coverPosition();
@@ -49,7 +49,7 @@
   }
 
   &2 {
-    background-image: url('./Common/assets/land-2.png');
+    background-image: url('./assets/land-2.png');
     z-index: 1;
 
     @include coverPosition();
@@ -61,7 +61,7 @@
 }
 
 .Tree {
-  background-image: url('./Common/assets/tree.png');
+  background-image: url('./assets/tree.png');
   z-index: 3;
 
   @include coverPosition();
