--- a/src/Company/Company.scss
+++ b/src/Company/Company.scss
@@ -19,7 +19,7 @@
 
   &Is {
     &Selected {
-      box-shadow: 0 0 0 3px $color-white, 0 0 0 7px rgba($color-primary, .35);
+      box-shadow: 0 0 0 3px $color-white, 0 0 0 7px rgba($color-blue, .35);
     }
   }
 }
