--- a/src/Company/pages/General/Update/Update.scss
+++ b/src/Company/pages/General/Update/Update.scss
@@ -11,8 +11,8 @@
 .Avatar {
   border: 8px solid $color-white;
   box-shadow:
-    0 0 8px rgba($color-black, .1),
-    0 12px 20px rgba($color-black, .05);
+    0 0 8px rgba($color-dark, .1),
+    0 12px 20px rgba($color-dark, .05);
   height: 140px;
   left: calc(50% - 70px);
   position: absolute;
