--- a/src/Core/containers/Plans/Item/Item.scss
+++ b/src/Core/containers/Plans/Item/Item.scss
@@ -70,7 +70,7 @@
     &Paid {
       border: 2px solid rgba($color-white, .2);
       box-shadow:
-        inset 0 8px 8px 0 rgba($color-black, .1),
+        inset 0 8px 8px 0 rgba($color-dark, .1),
         inset 0 -8px 8px 0 rgba($color-white, .1);
     }
   }
