--- a/src/Core/styles/colors.scss
+++ b/src/Core/styles/colors.scss
@@ -1,5 +1,5 @@
+// OLD
 // Blue
-$color-blue: #5c68ec;
 $color-blue-500: #0048e3;
 $color-blue-300: #5c68ec;
 $color-blue-200: #a4b3f8;
@@ -7,7 +7,6 @@ $color-blue-100: #e1e6fd;
 $color-blue-50: #eff2fd;
 
 // Brown
-$color-brown: #887466;
 
 // Gray
 $color-gray-1000: #000;
@@ -36,7 +35,6 @@ $color-orange-500: #fb681b;
 $color-orange-400: #fea250;
 
 // Pink
-$color-pink-500: #d13bfb;
 
 // Purple
 $color-purple-500: #7c50f8;
@@ -65,25 +63,43 @@ $color-purple: #a756ff;
 $color-warning: #f8a652;
 $color-white: #fff;
 
-$color-text: $color-gray-900;
-$color-text-secondary: $color-gray-700;
+// NEW
+
+// Backgrounds
+$color-background: #f5f5f3;
+$color-background-2: #eeeeeb;
+
+// Colors
+$color-dark: #2a2628;
+$color-blue: #5c68ec;
+$color-brown: #887466;
+$color-green: #55b242;
+$color-orange: #f8a652;
+$color-pink: #d13bfb; // #cd6cee
+$color-purple: #8c67f4;
+$color-red: #ee6c7e;
+$color-sky: #0089ff;
+$color-yellow: #ffe26c;
+$color-white: #fff;
 
 // Sources
 $color-telegram: #08c;
 $color-vk: #2787f5;
 
-// @todo - can be generated using a loop
+// Text
+$color-text: $color-dark;
+$color-text-secondary: lighten($color-dark, 28);
+
 $coloring-variants: (
-  Blue: $color-primary,
-  Default: $color-gray-800,
-  Gray: $color-gray-500,
-  Green: $color-green-500,
-  Orange: $color-orange-500,
-  Pink: $color-pink-500,
-  Purple: $color-purple-500,
-  Red: $color-red-500,
-  Sky: $color-sky-500,
-  Yellow: $color-yellow-500
+  Blue: $color-blue,
+  Gray: lighten($color-dark, 50),
+  Green: $color-green,
+  Orange: $color-orange,
+  Pink: $color-pink,
+  Purple: $color-purple,
+  Red: $color-red,
+  Sky: $color-sky,
+  Yellow: $color-yellow
 );
 
 @mixin coloring {
