Display error massages on sign in/up pages
Display error massages from the server. Change margin between description, field set and error massage.

--- a/src/Sign/pages/Up/Up.scss
+++ b/src/Sign/pages/Up/Up.scss
@@ -3,7 +3,7 @@
 
 .Description {
   color: $color-gray-500;
-  margin: 20px 0 0;
+  margin: 20px 0 28px;
 }
 
 .Disclaimer {
@@ -18,7 +18,7 @@
 .Fieldset {
   grid-row-gap: 0;
   grid-template-rows: repeat(2, 112px);
-  margin: 40px 0 0;
+  margin: -24px 0 0;
 }
 
 .Fleetly {
