--- a/src/Core/components/Empty/Empty.scss
+++ b/src/Core/components/Empty/Empty.scss
@@ -3,16 +3,32 @@
 .Root {
   align-items: center;
   display: flex;
-  flex-direction: column;
   height: 100%;
   justify-content: center;
   width: 100%;
 }
 
+.Actions {
+  margin: 40px 0 0;
+}
+
+.Content {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  max-width: 400px;
+  padding: 40px;
+  width: 100%;
+
+  & > img {
+    margin: 0 -40px;
+    max-width: calc(100% + 80px);
+  }
+}
+
 .Description {
-  color: $color-gray-600;
+  color: $color-text-secondary;
   margin: 12px 0 0;
-  max-width: 180px;
   text-align: center;
 }
 
