--- a/src/Sign/pages/Up/Up.scss
+++ b/src/Sign/pages/Up/Up.scss
@@ -1,30 +1,6 @@
-@import '~@styles/breakpoints';
-@import '~@styles/colors';
-
-.Description {
-  color: $color-gray-500;
-  margin: 20px 0 40px;
-}
+@import '~@sign/Sign.scss';
 
 .Disclaimer {
-  color: $color-gray-500;
-  margin: 12px 20px 0;
-
-  @include breakpoints(mobile) {
-    margin: 40px 20px;
-  }
-}
-
-.Fieldset {
-  grid-row-gap: 0;
-  grid-template-rows: repeat(2, 112px);
-}
-
-.Fleetly {
-  color: $color-primary;
-  text-shadow: 0 8px 4px rgba($color-primary, .1);
-}
-
-.Title {
-  color: $color-gray-800;
+  color: $color-text-secondary;
+  margin: 12px 16px;
 }
