--- a/src/Company/Company.scss
+++ b/src/Company/Company.scss
@@ -3,6 +3,14 @@
 .Root {
   display: flex;
   width: 100%;
+
+  &Is {
+    &Empty {
+      .Sidebar {
+        transform: translateX(-100%);
+      }
+    }
+  }
 }
 
 .Container {
@@ -42,4 +50,5 @@
   display: grid;
   flex: 0 0 88px;
   grid-template-rows: 88px 1fr 88px;
+  transition: .4s;
 }
