--- a/src/Core/components/Modal/Modal.scss
+++ b/src/Core/components/Modal/Modal.scss
@@ -27,8 +27,11 @@
   background: $color-gray-0;
   border-radius: 20px;
   box-shadow: 0 40px 80px 0 rgba(0, 0, 0, .06);
+  display: flex;
+  flex-direction: column;
+  max-height: calc(100vh - 80px);
   min-width: 360px;
-  padding: 40px;
+  overflow: hidden;
   position: relative;
   z-index: 2;
 }
@@ -37,4 +40,10 @@
   margin: 0 0 40px;
   text-align: center;
   white-space: nowrap;
+}
+
+.Wrapper {
+  height: 100%;
+  overflow: auto;
+  padding: 40px;
 }
